[project]
name = "coinnect-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "langchain>=0.3.21",
    "langchain-groq>=0.3.1",
    "langgraph>=0.3.20",
    "paymanai>=2.7.0",
    "uvicorn>=0.34.0",
]
